# nku-parallel-hw

./: .gitignore  CMakeLists.txt  CMakeLists_cuda.txt  PCFG.h  README_CUDA.md  ThreadPool.h  ThreadPoolAsync.cpp  ThreadPoolAsync.h  ThreadPoolAsync_fixed.cpp  ThreadPoolAsync_fixed.h  async_gpu_pipeline.cu  atodo.md  a命令  build.sh  build_cuda.bat  build_cuda.sh  build_cuda_fix.sh  build_pool.sh  build_pthread.sh  compile_cuda_manual.md  config.h  correctness_guess.cpp  correctness_guess_MPI.cpp  correctness_guess_pool.cpp  cpp_ifdef_remover.py  debug_async.cpp  dynamic_pthread-O0.txt  dynamic_pthread-O2.txt  dynamic_pthread-O2正确性.txt  guessing _MPI.cpp  guessing.cpp  guessing_MPI.cpp  guessing_cuda.cu  guessing_cuda.h  guessing_openmp.cpp  guessing_pthread.cpp  guessing_pthread_pool.cpp  main.cpp  main_async_test.cpp  main_avx.cpp  (+39 more)
.rubbish/: out.folded  perf.data
.rubbish/SIMD_rubbish/: md5_part_no_macro串行.h  test_neon.cpp  undefined_error.cpp
.rubbish/cuda_rubbish/: avx_result_10000.txt  avx_result_100000.txt  avx_result_1000000.txt  correct_test1000000.txt  new_result_10000.txt  new_result_100000.txt  new_result_1000000.txt  normal_output.txt  normal_test.txt1  output.txt  output_normal-O2.txt  output_normal.txt  output_old.txt  output_old2test.txt  output_old3test.txt  output_old4test.txt  output_oldtest.txt7  output_oldtest.txt8  output_oldtest.txt9  result_10000.txt  result_100000.txt  result_1000000.txt
archive/: a命令
archive/1SIMD/: main_avx.cpp  main_simd.cpp  md5_avx.cpp  md5_avx_opt.cpp  md5_simd_mask.cpp
archive/2Mul_thread/: guessing_pthread.cpp  测试每个PT能生成多少guess copy.txt  测试每个PT能生成多少guess.txt
archive/3MPI/: correctness_guess_MPI.cpp  guessing_MPI.cpp
cuda_temp_store/: guessing_ori.cpp  main.cpp  main_cuda.cpp
cur_result/: avx_result_10000.txt  avx_result_100000.txt  avx_result_only.txt  new_result_1000000.txt  result_1000.txt  result_10000000last_ver.txt  result_10000000test_string.txt  result_1000000bi_search.txt  result_1000000test_string.txt  result_100000test_string.txt  result_10000bi_searchtest.txt  result_13000000bi_search.txt  result_15000000bi_search.txt  result_5000000bi_search.txt  result_5000000string_view_ver.txt  result_5000000test_string.txt
cur_result/.rubbish/: normal_output_testlong.txt  result_10000000_testlong.txt  result_1000000_testlong.txt  result_100000_testlong.txt  result_10000_testlong.txt  result_1000_testlong.txt  result_100_testlong.txt  result_1050000_testlong.txt  result_10_testlong.txt  result_1100000_testlong.txt  result_1150000_testlong.txt  result_1200000_testlong.txt  result_1300000_testlong.txt  result_1400000_testlong.txt  result_1500000_testlong.txt  result_1700000_testlong.txt  result_1_testlong.txt  result_2000000_testlong.txt  result_3000000_testlong.txt  result_5000000_testlong.txt  result_900000_testlong.txt  result_950000_testlong.txt
hw1/: darw_matrix.py  draw_sum.py  matrix.cpp  matrix_cache.cpp  matrix_common.cpp  sum.cpp  sum_common.cpp  sum_multichain.cpp  sum_multichainunroll16.cpp  sum_superscalar.cpp  test.cpp
py_things/: avx-O1.ed  draw.py  dynamic_pthread-O0.ed  dynamic_pthread-O2正确性.ed  normal-O2aa.ed  omp-O2.ed  omp-O2for_test.ed  pool-O2.ed  scalar-O1.ed  scalar_win-O0.ed  scalar_win-O1.ed  scalar_win-O2.ed  使用内存对齐-O1.ed  朴素openmp也正常运作.ed
py_things/CUDA/: draw_guesstime.py  draw_hashtime.py  process_log_guesstime.py
py_things/CUDA/data/: result_10000000batch_size_test.txt  result_1000000batch_size_test.txt  result_100000batch_size_test.txt  result_1500000batch_size_test.txt  result_2000000batch_size_test.txt  result_200000batch_size_test.txt  result_3000000batch_size_test.txt  result_500000batch_size_test.txt  result_700000batch_size_test.txt  result_900000batch_size_test.txt
py_things/CUDA/data/.rubbish/: result_10000000bi_search.txt  result_10000000chang_time_sv.txt  result_10000bi_search.txt  (+15 more)
py_things/CUDA/processed/: cuda_100000.ed  cuda_1000000.ed  cuda_10000000.ed  cuda_1500000.ed  cuda_200000.ed  cuda_2000000.ed  cuda_3000000.ed  cuda_500000.ed  cuda_700000.ed  cuda_900000.ed  normal.ed
py_things/MPI/: draw.py
py_things/SIMDarchive/: draw_hashtime.py  process_log.py  不使用内存对齐-O1.ed
py_things/SIMDarchive/stringprocess影响/: parallel_hash_times.csv  plot_speedup.py  serial_md5_hash_times.csv
py_things/SIMDarchive/temp/: SIMD-O2inline.ed  not 非字符串数组 not  内存对齐-O2.ed  not 非字符串数组 yes 内存对齐-O2.ed  yes 非字符串数组 not 内存对齐-O2.ed  串行只有stringproc-O2.ed
py_things/SIMDarchive/点o、txt，即实验数据文件archive/: avx-O1.txt  avx-noopt.txt  avxnoopt.txt
py_things/temp/: SIMD-O2.ed  SIMD只有stringproc-O2.ed  avx-O2.ed  avx-noopt.ed  avxnoopt.ed  not 非字符串数组 not 内存对齐-O1.ed
py_things/temp/server/: SIMD-O0.ed  SIMD-O1.ed  scalar-O0.ed  scalar-O2.ed
py_things/thread/: CMakeLists.ed  dynamic_pthread-O1.ed  dynamic_pthread-O2.ed  omp-O1.ed  pthread_dynamic-O2.ed  test_outfile.ed  普通算法-O2正确性.ed  测试每个PT能生成多少guess.ed  经测试，pthread动态线程crack通过.ed
py_things/点o、txt，即实验数据文件archive/: avx-O2.txt  main_win-O1.txt
results/: avx_result.txt  正确性测试-O2test.e  正确性测试-O3test.e  正确性测试test.e
results/.rubbish_results/: 使用SIMD_test.e  普通串行test.e  正确性测试-O1test.e
results/py_draw/: draw.py  pool-O2.ed  pool_simd-O2.ed  process_log_guesstime.py  simd-O2.ed
results/win_res/: dynamic_pthread-O1.txt  omp-O1.txt  omp-O2.txt  pool-O2.txt
tests/: all_tests.cpp  build_tests.sh  correct_test.cpp  correct_test_avx.cpp  correctness_guess.cpp  correctness_guess_pool.cpp  test_nine_func.cpp  vrev32q_u8_test.cpp
(+45 files in other folders)
